Bug 249186 - dolphin crashes when I hover mouse over any file
Summary: dolphin crashes when I hover mouse over any file
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-27 07:51 UTC by phreedom.stdin
Modified: 2010-08-27 16:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description phreedom.stdin 2010-08-27 07:51:11 UTC
Application: dolphin (1.5.9)
KDE Platform Version: 4.5.66 (KDE 4.5.66 (KDE 4.6 >= 20100825)) (Compiled from sources)
Qt Version: 4.6.3
Operating System: Linux 2.6.31-gentoo-r10 i686

-- Information about the crash:
after dolphin starts, hovering mouse over any file causes this crash

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (dolphin), signal: Segmentation fault
[Current thread is 1 (Thread 0xb53b5710 (LWP 28589))]

Thread 3 (Thread 0xb317fb70 (LWP 28590)):
#0  0x410d131a in clock_gettime () from /lib/librt.so.1
#1  0xb5b618bd in qt_gettime () at kernel/qcore_unix.cpp:111
#2  0xb5b68d39 in QTimerInfoList::updateCurrentTime (this=0x81bd3cc) at kernel/qeventdispatcher_unix.cpp:340
#3  0xb5b692b9 in QTimerInfoList::timerWait (this=0x81bd3cc, tm=...) at kernel/qeventdispatcher_unix.cpp:443
#4  0xb5b66a09 in timerSourcePrepareHelper (src=0x81bd398, timeout=0xb317f0f8) at kernel/qeventdispatcher_glib.cpp:136
#5  0xb5b66b11 in timerSourcePrepare (source=0x81bd398, timeout=0xb317f0f8) at kernel/qeventdispatcher_glib.cpp:169
#6  0x47a18b3f in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#7  0x47a18fbd in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#8  0x47a19528 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#9  0xb5b65720 in QEventDispatcherGlib::processEvents (this=0x819a4e0, flags=...) at kernel/qeventdispatcher_glib.cpp:414
#10 0xb5b273b0 in QEventLoop::processEvents (this=0xb317f294, flags=...) at kernel/qeventloop.cpp:149
#11 0xb5b27622 in QEventLoop::exec (this=0xb317f294, flags=...) at kernel/qeventloop.cpp:201
#12 0xb59fbe78 in QThread::exec (this=0x8197820) at thread/qthread.cpp:487
#13 0xb5b03e29 in QInotifyFileSystemWatcherEngine::run (this=0x8197820) at io/qfilesystemwatcher_inotify.cpp:248
#14 0xb5a0096c in QThreadPrivate::start (arg=0x8197820) at thread/qthread_unix.cpp:248
#15 0x4106a67f in start_thread () from /lib/libpthread.so.0
#16 0x4123e95e in clone () from /lib/libc.so.6

Thread 2 (Thread 0xb1f72b70 (LWP 28595)):
[KCrash Handler]
#7  0xb5ad86ba in QUrl::operator== (this=0xc, url=...) at io/qurl.cpp:5901
#8  0xb7145124 in Nepomuk::Types::Entity::operator== (this=0xb1f72290, other=...) at /home/freedom/kde/src/trunk/KDE/kdelibs/nepomuk/types/entity.cpp:311
#9  0xb7179583 in Nepomuk::Utils::formatPropertyValue (property=..., value=..., resources=..., flags=...) at /home/freedom/kde/src/trunk/KDE/kdelibs/nepomuk/utils/global.cpp:57
#10 0xb75401f0 in KLoadFileMetaDataThread::run (this=0x853be90) at /home/freedom/kde/src/trunk/KDE/kdelibs/kio/kfile/kloadfilemetadatathread.cpp:147
#11 0xb5a0096c in QThreadPrivate::start (arg=0x853be90) at thread/qthread_unix.cpp:248
#12 0x4106a67f in start_thread () from /lib/libpthread.so.0
#13 0x4123e95e in clone () from /lib/libc.so.6
The current source language is "auto; currently asm".

Thread 1 (Thread 0xb53b5710 (LWP 28589)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0x412343d7 in poll () from /lib/libc.so.6
#2  0x4109637b in _xcb_conn_wait () from /usr/lib/libxcb.so.1
#3  0x4109692e in _xcb_out_send () from /usr/lib/libxcb.so.1
#4  0x41096cd7 in xcb_writev () from /usr/lib/libxcb.so.1
#5  0x412fd6ca in _XSend () from /usr/lib/libX11.so.6
#6  0x412e9e28 in PutSubImage () from /usr/lib/libX11.so.6
#7  0x412ea03b in XPutImage () from /usr/lib/libX11.so.6
#8  0xb62dd039 in QX11PixmapData::fromImage (this=0x8558798, img=..., flags=...) at image/qpixmap_x11.cpp:612
#9  0xb62c321d in QPixmap::fromImage (image=..., flags=...) at image/qpixmap.cpp:1993
#10 0xb6e82dbf in KIconLoader::loadIcon (this=0x80d6ee8, _name=..., group=KIconLoader::Desktop, size=128, state=0, overlays=..., path_store=0x0, canReturnNull=false)
    at /home/freedom/kde/src/trunk/KDE/kdelibs/kdeui/icons/kiconloader.cpp:1297
#11 0xb6e82683 in KIconLoader::loadMimeTypeIcon (this=0x80d6ee8, _iconName=..., group=KIconLoader::Desktop, size=128, state=0, overlays=..., path_store=0x0)
    at /home/freedom/kde/src/trunk/KDE/kdelibs/kdeui/icons/kiconloader.cpp:1169
#12 0xb7445bc2 in KFileItem::pixmap (this=0x8488b50, _size=128, _state=0) at /home/freedom/kde/src/trunk/KDE/kdelibs/kio/kio/kfileitem.cpp:927
#13 0xb77e5567 in InformationPanelContent::showIcon (this=0x8199568, item=...) at /home/freedom/kde/src/trunk/KDE/kdebase/apps/dolphin/src/panels/information/informationpanelcontent.cpp:309
#14 0xb77e5dd6 in InformationPanelContent::qt_metacall (this=0x8199568, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbfb770b8)
    at /home/freedom/kde/build/trunk/KDE/kdebase/apps/dolphin/src/informationpanelcontent.moc:85
#15 0xb5b329d5 in QMetaObject::metacall (object=0x8199568, cl=QMetaObject::InvokeMetaMethod, idx=29, argv=0xbfb770b8) at kernel/qmetaobject.cpp:237
#16 0xb5b47300 in QMetaObject::activate (sender=0x8486c60, m=0xb75a7184, local_signal_index=1, argv=0xbfb770b8) at kernel/qobject.cpp:3295
#17 0xb748ec9a in KIO::PreviewJob::failed (this=0x8486c60, _t1=...) at /home/freedom/kde/build/trunk/KDE/kdelibs/kio/previewjob.moc:106
#18 0xb748c14b in KIO::PreviewJobPrivate::startPreview (this=0x8510088) at /home/freedom/kde/src/trunk/KDE/kdelibs/kio/kio/previewjob.cpp:253
#19 0xb748ebb1 in KIO::PreviewJob::qt_metacall (this=0x8486c60, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfb772c8) at /home/freedom/kde/build/trunk/KDE/kdelibs/kio/previewjob.moc:86
#20 0xb5b329d5 in QMetaObject::metacall (object=0x8486c60, cl=QMetaObject::InvokeMetaMethod, idx=34, argv=0xbfb772c8) at kernel/qmetaobject.cpp:237
#21 0xb5b47300 in QMetaObject::activate (sender=0x8503c10, m=0xb5c79168, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3295
#22 0xb5b50a8d in QSingleShotTimer::timeout (this=0x8503c10) at .moc/debug-shared/qtimer.moc:82
#23 0xb5b50bf8 in QSingleShotTimer::timerEvent (this=0x8503c10) at kernel/qtimer.cpp:308
#24 0xb5b41fae in QObject::event (this=0x8503c10, e=0xbfb779fc) at kernel/qobject.cpp:1212
#25 0xb618dd24 in QApplicationPrivate::notify_helper (this=0x806da80, receiver=0x8503c10, e=0xbfb779fc) at kernel/qapplication.cpp:4306
#26 0xb618e196 in QApplication::notify (this=0xbfb77ce4, receiver=0x8503c10, e=0xbfb779fc) at kernel/qapplication.cpp:3710
#27 0xb6eda71e in KApplication::notify (this=0xbfb77ce4, receiver=0x8503c10, event=0xbfb779fc) at /home/freedom/kde/src/trunk/KDE/kdelibs/kdeui/kernel/kapplication.cpp:310
#28 0xb5b2b038 in QCoreApplication::notifyInternal (this=0xbfb77ce4, receiver=0x8503c10, event=0xbfb779fc) at kernel/qcoreapplication.cpp:726
#29 0xb618aceb in QCoreApplication::sendEvent (receiver=0x8503c10, event=0xbfb779fc) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#30 0xb5b68ff8 in QTimerInfoList::activateTimers (this=0x8070834) at kernel/qeventdispatcher_unix.cpp:603
#31 0xb5b6682c in timerSourceDispatch (source=0x8070800) at kernel/qeventdispatcher_glib.cpp:184
#32 0x47a15765 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#33 0x47a192cb in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#34 0x47a19528 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#35 0xb5b65700 in QEventDispatcherGlib::processEvents (this=0x804f6d0, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#36 0xb6280e4c in QGuiEventDispatcherGlib::processEvents (this=0x804f6d0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#37 0xb5b273b0 in QEventLoop::processEvents (this=0xbfb77c78, flags=...) at kernel/qeventloop.cpp:149
#38 0xb5b27622 in QEventLoop::exec (this=0xbfb77c78, flags=...) at kernel/qeventloop.cpp:201
#39 0xb5b2b98d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1003
#40 0xb6190e86 in QApplication::exec () at kernel/qapplication.cpp:3585
#41 0xb77e15d4 in kdemain (argc=1, argv=0xbfb77eb4) at /home/freedom/kde/src/trunk/KDE/kdebase/apps/dolphin/src/main.cpp:98
#42 0x080487b9 in main (argc=1, argv=0xbfb77eb4) at /home/freedom/kde/build/trunk/KDE/kdebase/apps/dolphin/src/dolphin_dummy.cpp:3

This bug may be a duplicate of or related to bug 249059.

Reported using DrKonqi
Comment 1 Peter Penz 2010-08-27 07:56:14 UTC
Thanks for the report. Does it work if you disable Nepomuk?
Comment 2 phreedom.stdin 2010-08-27 08:27:09 UTC
Just compiled fresh kdelibs trunk since it had some nepomuk-related commits. Killed nepomukserver. No changes :(
Comment 3 Peter Penz 2010-08-27 08:39:23 UTC
OK, then I'll reassign it to Nepomuk
Comment 4 Sebastian Trueg 2010-08-27 16:33:12 UTC
SVN commit 1168833 by trueg:

Fixed two bugs:
1. The d-pointer in Entity instances can be 0. Thus, check for that in the comparison operators and in reset()
2. Fixed the reference counting on the cached Entity instances. I have no idea how this bug could survive this
   long without being detected. Amazing. :)

BUG: 249186

 M  +7 -0      entity.cpp  
 M  +16 -43    entitymanager.cpp  
 M  +4 -8      entitymanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1168833