Fixed two bugs: 1. The d-pointer in Entity instances can be 0. Thus, check for that in the comparison operators and in reset() 2. Fixed the reference counting on the cached Entity instances. I have no idea how this bug could survive this    long without being detected. Amazing. :)

BUG: 249186

svn path=/trunk/KDE/kdelibs/; revision=1168833